--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
 
 # ---Add p6---
-add_subdirectory(p6)
+add_subdirectory(lib/p6)
 target_link_libraries(${PROJECT_NAME} p6::p6)
 
 
